fix IE nav wrapping

--- a/sass/_custom-component-overrides.scss
+++ b/sass/_custom-component-overrides.scss
@@ -3,6 +3,11 @@
  */
 nav {
 
+  ul {
+    a {
+      display: inline-block; // fix IE collapsing
+    }
+  }
   .brand-logo {
 
     img {
